<resources>
    <string name="app_name">gerenciador-senhas</string>
    <string name="user_name">Email</string>

    <!--project config -->
    <string name="url_biis_prod">https://dev.people.com.ai/mobile/api/v2/</string>
    <string name="content_type">application/json</string>

    <!--login-->
    <string name="password">Senha</string>
    <string name="enter">Enrtar</string>
    <string name="sign_up">Cadastrar</string>

    <!--cadastro-->
    <string name="toolbar_title_create_new_account">Criar novo cadastro</string>
    <string name="act_register_bt_create_register">Criar Cadastro</string>
    <string name="act_continue">Continuar</string>
    <string name="act_register_digital">Acessar usando a minha digital</string>
    <string name="act_register_tv_title_form">Ops, um formulário!</string>
    <string name="act_register_description_form">Mas relaxa, vai ser rapidinho! Basta informar\nos seus dados de acesso, e pronto!</string>
    <string name="act_register_ht_name_full">Informe seu name completo</string>
    <string name="act_register_ht_your_email">Informe seu e-mail</string>
    <string name="act_resgister_err_email">Email incorreto</string>
    <string name="act_register_ht_document">CPF</string>
    <string name="act_register_tv_data_access">Dados de acesso</string>
    <string name="act_register_ht_create_login">Crie seu login</string>
    <string name="act_register_ht_create_passsword">Crie uma senha</string>
    <string name="act_register_ht_confirm_password">Confirme a senha</string>
    <string name="act_resgister_err_password">Sua senha deverá ter no mínimo \n6 caracteres</string>
    <string name="act_resgister_err_confirm_password">As senhas não conferem.</string>
    <string name="act_register_tv_pw_weak">obrigatório letra, número e caractere</string>
    <string name="act_register_tv_pw_avarage">obrigatório letra, número e caractere</string>
    <string name="act_register_tv_pw_strong">Senha forte</string>
    <string name="act_register_tv_pwlogin_important">Seu login e senha são muito importantes!</string>
    <string name="act_register_tv_pwlogin_access_app">É com eles que você acessará o aplicativo.</string>
    <string name="act_register_err_login">Mínimo de 8 e máximo 14 caracteres</string>
    <string name="act_register_err_namecomplet_isempty">Campo obrigatório</string>
    <string name="act_register_tv_showpassword">MOSTRAR</string>
    <string name="act_register_tv_or">ou</string>
    <string name="act_register_err_full_name">Digite seu name completo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_add_sites">adicione seus logins em sites para serem armazenados</string>

    <string name="error_required_field">Campo obrigatório</string>
    <string name="errorrequired_pass_not_empty">Senha obrigatório</string>

</resources>
